[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Actors/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/UIGoldPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/UITowerShop/UITowerShop.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/UIUpgradeShop/UIUpgradeShop.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/UIScreenOverlay.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/Level1.tscn" type="PackedScene" id=7]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="Control" parent="UILayer/UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartWaveButton" type="Button" parent="UILayer/UI/HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 256.0
margin_top = -184.0
margin_right = 448.0
margin_bottom = -120.0
text = "Start!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="UILayer/UI/HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -32.0
margin_right = 96.0
margin_bottom = 32.0
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIGoldPanel" parent="UILayer/UI/HUD" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -108.0
margin_top = -56.0
margin_right = 108.0
margin_bottom = 0.0

[node name="UITowerShop" parent="UILayer/UI/HUD" instance=ExtResource( 4 )]
margin_top = -248.0
margin_bottom = -64.0

[node name="UIUpgradeShop" parent="UILayer/UI/HUD" instance=ExtResource( 5 )]

[node name="MouseBarrier" type="Control" parent="UILayer/UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIScreenOverlay" parent="UILayer/UI" instance=ExtResource( 6 )]

[node name="Level" parent="." instance=ExtResource( 7 )]

[connection signal="pressed" from="UILayer/UI/HUD/StartWaveButton" to="." method="_on_StartWaveButton_pressed"]
[connection signal="pressed" from="UILayer/UI/HUD/RetryButton" to="." method="_on_RetryButton_pressed"]
